# technologies-practices

./: .gitignore  CLAUDE.md  README.md  clean_all.py  gen_all_compile_commands.bat
.zed/: settings.json
practice_007a_opentelemetry/: CLAUDE.md  docker-compose.yml  models.py  order_api.py  payment_service.py  propagation.py  pyproject.toml  test_tracing.py  tracing.py
practice_012a_cpp17_abseil/: CLAUDE.md  CMakeLists.txt  build.bat  build.sh  clean.py
practice_012a_cpp17_abseil/src/: constexpr_folds.cpp  containers.cpp  error_handling.cpp  main.cpp  optional_variant.cpp  string_processing.cpp  structured_bindings.cpp
practice_012b_boost/: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  clean.py  gen_compile_commands.bat
practice_012b_boost/src/: cli.cpp  cli.hpp  graph_algo.cpp  graph_algo.hpp  main.cpp  serialization.cpp  serialization.hpp  server.cpp  server.hpp  types.hpp
practice_013_financial_cpp/: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  clean.py  gen_compile_commands.bat
practice_013_financial_cpp/config/: README_FIX44_XML.txt  acceptor.cfg  initiator.cfg
practice_013_financial_cpp/src/: bond_pricing.cpp  fix_acceptor_main.cpp  fix_application.cpp  fix_application.h  fix_client.cpp  option_pricing.cpp
practice_016_rest_api/: CLAUDE.md  clean.py  pyproject.toml
practice_016_rest_api/app/: errors.py  main.py  middleware.py  models.py  store.py
practice_017c_rl_dreamer/: CLAUDE.md  clean.py  pyproject.toml
practice_017c_rl_dreamer/app/: actor_critic.py  config.py  decoder.py  encoder.py  imagination.py  replay_buffer.py  rssm.py  train.py  world_model.py
practice_018a_cmake_modern_build/: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat
practice_018a_cmake_modern_build/apps/: json_demo.cpp
practice_018a_cmake_modern_build/cmake/: FetchDeps.cmake
practice_018a_cmake_modern_build/src/: config.h.in  greeter.cpp  greeter.h  main.cpp
practice_018a_cmake_modern_build/tests/: test_greeter.cpp
practice_018b_cmake_advanced/: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  build.bat
practice_018b_cmake_advanced/cmake/: FindMyMath.cmake  MyMathConfig.cmake.in  toolchain-mingw.cmake
practice_018b_cmake_advanced/codegen/: CMakeLists.txt  codegen_demo.cpp  data.txt  embed_file.cmake
practice_018b_cmake_advanced/src/: main.cpp  mymath.cpp  mymath.h
practice_018b_cmake_advanced/tests/: CMakeLists.txt  test_advanced.cpp  test_mymath.cpp
practice_019a_cuda_fundamentals/: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  clean.py
practice_019a_cuda_fundamentals/include/: cuda_helpers.h
practice_019a_cuda_fundamentals/src/: phase1_hello.cu  phase2_memory.cu  phase3_matmul.cu  phase4_shared.cu  phase5_reduction.cu  phase6_profiling.cu
practice_019b_cuda_hpc_hft/: CLAUDE.md  CMakeLists.txt  build.bat  clean.py  gen_compile_commands.bat
practice_019b_cuda_hpc_hft/include/: cuda_helpers.h
practice_019b_cuda_hpc_hft/src/: phase1_streams.cu  phase2_pinned.cu  phase3_pipeline.cu  phase4_cooperative.cu  phase5_unified.cu  phase6_low_latency.cu
practice_020a_hft_lowlatency_cpp/: .gitignore  CLAUDE.md  CMakeLists.txt  build.bat  clean.py
practice_020a_hft_lowlatency_cpp/include/: hft_common.h
practice_020a_hft_lowlatency_cpp/src/: phase1_cache.cpp  phase2_spsc.cpp  phase3_memory.cpp  phase4_dispatch.cpp  phase5_timing.cpp  phase6_pipeline.cpp
practice_020b_hft_systems/: CLAUDE.md  CMakeLists.txt  build.bat  clean.py
practice_020b_hft_systems/include/: feed_handler.h  matching_engine.h  oms.h  order_book.h  signal.h  types.h
practice_020b_hft_systems/src/: phase1_orderbook.cpp  phase2_matching.cpp  phase3_feed.cpp  phase4_signal.cpp  phase5_oms.cpp  phase6_simulation.cpp
practice_022_concurrent_queues/: CLAUDE.md  CMakeLists.txt  build.bat
practice_022_concurrent_queues/include/: bench_utils.h
practice_022_concurrent_queues/src/: phase1_basics.cpp  phase2_multithreaded.cpp  phase3_tokens.cpp  phase4_bulk.cpp  phase5_blocking.cpp  phase6_patterns.cpp
practice_024a_testing_python/: CLAUDE.md  clean.py  pyproject.toml
practice_024a_testing_python/tests/: conftest.py
practice_024a_testing_python/wallet/: models.py  notifications.py  repository.py  service.py
practice_025d_ml_compilers_triton/: CLAUDE.md  Dockerfile  clean.py  docker-compose.yml  pyproject.toml
practice_025d_ml_compilers_triton/kernels/: benchmark.py  main.py  matmul_relu.py  softmax.py  vector_add.py
practice_026b_etl_dagster/: CLAUDE.md  Dockerfile  clean.py  dagster.yaml  docker-compose.yml  pyproject.toml  workspace.yaml
practice_026b_etl_dagster/dagster_project/: definitions.py  phase1_basic_assets.py  phase2_asset_graph.py  phase3_partitions.py  phase4_dbt_assets.py  phase5_automation.py  resources.py
practice_026b_etl_dagster/data/: generate_weather.py
practice_026b_etl_dagster/dbt_project/: dbt_project.yml  profiles.yml
practice_030c_dspy_langgraph_integration/: .env.example  .gitignore  CLAUDE.md  clean.py  pyproject.toml
practice_030c_dspy_langgraph_integration/src/: 00_verify_setup.py  01_react_agent.py  02_langchain_tools.py  03_dspy_langgraph_nodes.py  04_streaming_e2e.py  05_optimize_graph.py  llm_config.py
practice_031b_agentic_multi_agent_systems/: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
practice_031c_agentic_production_patterns/: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
practice_032a_lp_simplex/: CLAUDE.md  CMakeLists.txt
practice_032b_lp_interior_point/: CLAUDE.md  CMakeLists.txt
practice_033a_convex_first_order/: CLAUDE.md  CMakeLists.txt
practice_033b_convex_second_order/: CLAUDE.md  CMakeLists.txt
practice_034a_mip_branch_bound/: CLAUDE.md  Cargo.toml
practice_034b_mip_cutting_planes/: CLAUDE.md  Cargo.toml
practice_035a_nonconvex_local_search/: CLAUDE.md  Cargo.toml
practice_035b_nonconvex_evolutionary/: CLAUDE.md  Cargo.toml
practice_036a_network_flows/: .gitignore  CLAUDE.md  CMakeLists.txt
practice_036b_tsp_vrp_heuristics/: CLAUDE.md  CMakeLists.txt
practice_037_constraint_programming/: CLAUDE.md  Cargo.toml
(+1276 files in other folders)
