[project]
name = "testing-patterns-python"
version = "0.1.0"
description = "Testing Patterns — pytest, Hypothesis, mocking, and TDD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-mock>=3.14",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "property: Property-based tests (Hypothesis)",
    "integration: Integration tests (slower, may use I/O)",
]
addopts = "-ra --strict-markers"
