[project]
name = "practice-025d-ml-compilers-triton"
version = "0.1.0"
description = "Triton custom GPU kernels — vector add, softmax, fused matmul+ReLU"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "triton>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
