[project]
name = "practice-026b-etl-dagster"
version = "0.1.0"
description = "Practice 026b: ETL/ELT Orchestration with Dagster Assets & dbt"
readme = "CLAUDE.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.6",
    "dagster-webserver>=1.6",
    "dagster-postgres>=0.22",
    "dagster-dbt>=0.22",
    "dbt-core>=1.7",
    "dbt-postgres>=1.7",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
