[project]
name = "practice-030c-dspy-langgraph-integration"
version = "0.1.0"
description = "Practice 030c — DSPy + LangGraph Integration"
requires-python = ">=3.12"
dependencies = [
    "dspy-ai[langchain]",
    "langgraph",
    "langchain",
    "langchain-core",
    "langchain-ollama",
    "pydantic",
]
